--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
         </profile>
         <profile>
             <id>ansible</id>
+            <properties>
+                <maven.test.skip>true</maven.test.skip>
+                <skipITs>true</skipITs>
+            </properties>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -213,13 +217,29 @@
                     <version>1.2.0</version>
                     <configuration>
                         <promoteDebugAsInfo>true</promoteDebugAsInfo>
-                        <playbook>provision/tasks/main.yml</playbook>
+                        <playbook>provision/site.yml</playbook>
+                        <!--<playbook>provision/tasks/main.yml</playbook>-->
+                        <vaultPasswordFile>provision/vars/password.txt</vaultPasswordFile>
+                        <inventory>provision/inventory/hosts</inventory>
                     </configuration>
                     <executions>
                         <execution>
                             <id>ansible-playbook</id>
                             <goals>
                                 <goal>playbook</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>1.3.6.RELEASE</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
                             </goals>
                         </execution>
                     </executions>
@@ -235,6 +255,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
         <resources>
