Upgrade spring boot, fix camel in it, improve tests
TODO sort out the h2 stuff, improve swagger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,7 @@ logging:
         org.springframework.cloud: debug
         org.springframework.test: warn
         biz.letsweb.micro: debug
+
+greeting: Hello World
+timer:
+ period: 2000
